# bubbletester

./: CMakeLists.txt  README.md
cmake/: Findlibbubbler.cmake
include/: BP1Driver.hpp  BouncePath.hpp  CTAnalyticPotential.hpp  CTFiniteTempModel.hpp  CasadiCollocationDriver.hpp  CasadiCollocationDriver2.hpp  CasadiCollocationWeights.hpp  CasadiCommon.hpp  CasadiMaupertuisDriver.hpp  CasadiPotential.hpp  FiniteTempPotential.hpp  GenericBounceSolver.hpp  GenericPotential.hpp  Rotation.hpp  SimpleBounce.hpp  SimpleBounceDriver.hpp
src/: CTFiniteTempModel.cpp  FiniteTempPotential.cpp  GenericPotential.cpp  Rotation.cpp  SimpleBounce.cpp  test_linkage.cpp
tests/: CMakeLists.txt
tests/CTAnalyticExample/: CMakeLists.txt  TestCTAnalyticPotential.cpp
tests/CTFiniteTempExample/: CMakeLists.txt  CTFiniteTempExample.cpp  Simple2DModel.cpp  Simple2DModel.hpp  TestSimple2DModel.cpp
tests/CasadiFiniteTemp/: CMakeLists.txt  CasadiFiniteTemp.cpp
tests/CasadiStandAlone/: CMakeLists.txt  CasadiMaupertuis.cpp  CasadiTest.cpp  TestCasadiPotential.cpp
tests/Polynomials/: CMakeLists.txt  Polynomials.cpp
tests/SimpleNucleation/: CMakeLists.txt  SimpleNucleation.cpp
tests/ThinWall1D/: CMakeLists.txt  QuarticPotential.hpp  TestThinWall1D.cpp  ThinWall1D.cpp
